Dont configure network manager when disabled

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -41,5 +41,6 @@
         dest: /etc/NetworkManager/NetworkManager.conf
       notify:
         - reload nmcli
+      when: disable_networkmanager is undefined or not disable_networkmanager
     - meta: flush_handlers
   when: net_conf is defined and net_conf == 'explicit'
